syntax = "proto3";

option csharp_namespace = "GrpcService";

package UserOrganizationAssociationServices;
import "google/protobuf/wrappers.proto";

message AssociateUserToOrganizationRequest {
    int32 OrganizationId = 1;
    int32 UserId = 2;
}

message AssociateUserToOrganizationResponse {
      int32 UserToOrganizationAssociationId = 1;
}

message DisassociateUserFromOrganizationRequest {
    int32 OrganizationId = 1;
    int32 UserId = 2;
}

message DisassociateUserFromOrganizationResponse {
}

message QueryUsersForOrganizationRequest {
    int32 OrganizationId = 1;
    google.protobuf.Int32Value Page = 2;
    google.protobuf.Int32Value PageSize = 3;
    google.protobuf.StringValue OrderBy = 4;
    google.protobuf.StringValue Direction = 5;
    google.protobuf.StringValue QueryString = 6;
}

message QueryUsersForOrganizationResponse {
    int32 page = 1;
    int32 pageSize = 2;
    int32 total = 3;
    repeated UsersForOrganizationList users = 4;
}

message UsersForOrganizationList {
    int32 Id = 1;
    string Name = 2;
    string Username = 3;
    string Email = 4;
    int64 CreatedAt = 6;
}

service UserOrganizationAssociationServices {
    rpc AssociateUserToOrganization(AssociateUserToOrganizationRequest) returns (AssociateUserToOrganizationResponse);
    rpc DisassociateUserFromOrganization(DisassociateUserFromOrganizationRequest) returns (DisassociateUserFromOrganizationResponse);
    rpc QueryUsersForOrganization(QueryUsersForOrganizationRequest) returns (QueryUsersForOrganizationResponse);
}